@@ -1,5 +1,9 @@
 2001-07-21 Kevin Vandersloot <kfv101@psu.edu>
 
+	*procdialogs.c: add show_threads config to config dialog
+
+2001-07-21 Kevin Vandersloot <kfv101@psu.edu>
+
 	*procdialogs.c: fix misspelling of preferences.
 
 2001-07-20 Kevin Vandersloot <kfv101@psu.edu>
